run_julia_multigrid_critical_radius/Reports/1661421/output.1661421.out
Fri Jan 24 12:38:17 EST 2025
MODULES LOADED
  File "/sfs/gpfs/tardis/home/xpz5km/Cahn_Hilliard_Model/run_julia_multigrid_critical_radius/plot_timepoints_critical_radius.py", line 20
    def plot_timepoint(phi_name, indir, outdir)
                                               ^
SyntaxError: expected ':'
DONE
